apps/stirling-pdf/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Stirling PDF"
    gethomepage.dev/description: "PDF Toolbox"
    gethomepage.dev/icon: "stirling-pdf.png"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/weight: "25"
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
  hostnames:
    - "pdf.ganam.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stirling-pdf-stirling-pdf-chart
          port: 8080
